<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".profile.mvp.ProfileActivity">


    <ImageView
        tools:src="@drawable/ic_photo_placeholder"
        android:id="@+id/iv_photo"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="fitXY" />


    <TextView
        android:layout_marginTop="8dp"
        android:text="@string/label_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:textColor="@android:color/secondary_text_dark"
    />


    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        tools:text="name" />


    <TextView
        android:layout_marginTop="8dp"
        android:text="@string/label_second_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:textColor="@android:color/secondary_text_dark"
        />


    <TextView
        android:id="@+id/tv_second_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        tools:text="second name" />

    <TextView
        android:layout_marginTop="8dp"
        android:text="@string/label_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:textColor="@android:color/secondary_text_dark"
        />


    <TextView
        android:id="@+id/tv_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        tools:text="gender" />


    <TextView
        android:layout_marginTop="8dp"
        android:text="@string/label_job_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:textColor="@android:color/secondary_text_dark"
        />


    <TextView
        android:id="@+id/tv_job_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        tools:text="job_title" />


    <TextView
        android:layout_marginTop="8dp"
        android:text="@string/label_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:textColor="@android:color/secondary_text_dark"
        />


    <TextView
        android:id="@+id/tv_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        tools:text="about" />



</LinearLayout>